+validation for registration, +common passwords list, +created and updated dates
